@@ -37,29 +37,37 @@ public class JqlNavigationFeatureTransformer<NE, P extends NE, E extends P, C ex
         for (Feature jqlFeature : features) {
             try {
                 if (navigationBase == null) {
-                    throw new IllegalStateException(String.format("Invalid selector: %s", jqlFeature.getName()));
+                    throw new IllegalStateException("Invalid selector: " + jqlFeature.getName());
                 }
-                Optional<? extends PTE> attribute = getModelAdapter().getAttribute(navigationBase,
-                        jqlFeature.getName());
-                Optional<? extends RTE> reference = getModelAdapter().getReference(navigationBase,
-                        jqlFeature.getName());
+                Optional<? extends PTE> attribute = getModelAdapter().getAttribute(navigationBase, jqlFeature.getName());
+                Optional<? extends RTE> reference = getModelAdapter().getReference(navigationBase, jqlFeature.getName());
                 Optional<? extends S> sequence = getModelAdapter().getSequence(navigationBase, jqlFeature.getName());
                 if (attribute.isPresent()) {
-                    JqlFeatureTransformResult<C> transformResult = transformAttribute(attribute.get(), context,
-                            baseExpression, navigationBase, jqlFeature);
+                    if (!(baseExpression instanceof ObjectExpression)) {
+                        throw new IllegalStateException(String.format("Attribute selector on %s expression is not supported",
+                                                                      baseExpression.getClass().getSimpleName()));
+                    }
+                    JqlFeatureTransformResult<C> transformResult =
+                            transformAttribute(attribute.get(), context, baseExpression, navigationBase, jqlFeature);
                     baseExpression = transformResult.baseExpression;
                     navigationBase = transformResult.navigationBase;
                 } else if (reference.isPresent()) {
-                    JqlFeatureTransformResult<C> transformResult = transformReference(reference.get(), context,
-                            baseExpression, navigationBase, jqlFeature);
+                    JqlFeatureTransformResult<C> transformResult =
+                            transformReference(reference.get(), context, baseExpression, navigationBase, jqlFeature);
                     baseExpression = transformResult.baseExpression;
                     navigationBase = transformResult.navigationBase;
                 } else if (sequence.isPresent()) {
-                    baseExpression = newObjectSequenceBuilder().withObjectExpression((ObjectExpression) baseExpression)
-                            .withSequenceName(jqlFeature.getName()).build();
+                    if (!(baseExpression instanceof ObjectExpression)) {
+                        throw new IllegalStateException(String.format("Sequence selector on %s expression is not supported",
+                                                                      baseExpression.getClass().getSimpleName()));
+                    }
+                    baseExpression = newObjectSequenceBuilder()
+                            .withObjectExpression((ObjectExpression) baseExpression)
+                            .withSequenceName(jqlFeature.getName())
+                            .build();
                 } else if (isExtendedFeature(jqlFeature, context)) {
-                    JqlFeatureTransformResult<C> transformResult = transformExtendedFeature(jqlFeature, context,
-                            baseExpression, navigationBase);
+                    JqlFeatureTransformResult<C> transformResult =
+                            transformExtendedFeature(jqlFeature, context, baseExpression, navigationBase);
                     baseExpression = transformResult.baseExpression;
                     navigationBase = transformResult.navigationBase;
                 } else {
@@ -67,11 +75,11 @@ public class JqlNavigationFeatureTransformer<NE, P extends NE, E extends P, C ex
                     String errorMessage = String.format("Feature %s of %s not found", jqlFeature.getName(),
                             getModelAdapter().buildTypeName(navigationBase).orElse(null));
                     JqlExpressionBuildingError error = new JqlExpressionBuildingError(errorMessage, jqlFeature);
-                    throw new JqlExpressionBuildException(subject, Arrays.asList(error));
+                    throw new JqlExpressionBuildException(subject, List.of(error));
                 }
             } catch (Exception e) {
-                throw new JqlExpressionBuildException(baseExpression,
-                        Arrays.asList(new JqlExpressionBuildingError(e.getMessage(), jqlFeature)), e);
+                throw new JqlExpressionBuildException(
+                        baseExpression, List.of(new JqlExpressionBuildingError(e.getMessage(), jqlFeature)), e);
             }
         }
         return new JqlFeatureTransformResult<>(navigationBase, baseExpression);
